--- a/design/content/page1.html
+++ b/design/content/page1.html
@@ -9,6 +9,7 @@
   <!-- <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css"> -->
   <link rel="stylesheet" href="../../css/style.css">
+  <link rel="icon" href="../../partials/images/logo2.png">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
   <!-- Google Font Scripts -->
   <link rel="stylesheet" type="text/css"
@@ -38,22 +39,30 @@
         <i class="fa fa-close close-icon"></i>
     </a>
     <h1 class="section-title"> Cal Hacks 4.0</h1>
-    <h4 class="section-subtitle sub"> I'm a director at Cal Hacks, the
+    <h4 class="section-subtitle sub"> I'm a director at <a href="https://calhacks.io/" target="_blank">Cal Hacks</a>, the
       largest hackathon in the world! One of my main roles is as graphic
       designer &mdash; logos, branding, marketing, you name it. Over the
       past year, I created the branding for Cal Hacks 4.0 under the general
-      guidance of a California road trip theme.
+      guidance of a California road trip theme to celebrate the fact that
+      advanced and beginner hackers alike come to California from all over the world to hack with us in Berkeley.
     </h4>
-        <div class="half-image" style="background-color:#b0e1e2"><img src="../../partials/images/design/calhacks/ddoskiblue.png" class="height"></div>
-        <div class="half-image"><img src="../../partials/images/design/calhacks/ddoskirepeat.png"></div>
         <div class="full-image"><img src="../../partials/images/design/chroadtrip.png"></div>
         <div class="content-text">
+            Every iteration of Cal Hacks gets dressed in a new bear named <a>dd0ski</a> that represents UC Berkeley's mascot Oski.
+            I designed the Cal Hacks 4.0 dd0ski &mdash; this little guy was featured on thousands of shirts, swag bags, badges,
+            wristbands, and more!
+        </div>
+        <div class="full-image" style="background-color:#b0e1e2"><img src="../../partials/images/design/calhacks/ddoskiblue.png" class="height"></div>
+        <div class="content-text">
             Cal Hacks 4.0 was an event marketed to tens of thousands of
-            people, and we ultimately ended up hosting 2000 people at the
-            California Memorial Stadium. Badges, shirts, wristbands, banners,
+            people, and we ultimately ended up hosting 2000 people at
+            <a href="http://www.californiamemorialstadium.com/" target="_blank">California Memorial Stadium.</a> Badges, shirts, wristbands, banners,
             posters, maps, flyers, Snapchat filters, countdowns, decals, and
             more were all part of the
             agenda &mdash; below is a compilation of some of the finals products!
+            <br></br>
+            Attendees consisted of hackers, volunteers, sponsors, and mentors &mdash; each of which had a different type
+            of badge. All attendees also were given wristbands.
         </div>
         <div class="quarter-image"><img src="../../partials/images/design/calhacks/chbadges1.png" class="heightextra"></div>
         <div class="quarter-image"><img src="../../partials/images/design/calhacks/chbadges2.png" class="heightextra"></div>
@@ -61,10 +70,18 @@
         <div class="quarter-image"><img src="../../partials/images/design/calhacks/chbadges4.png" class="heightextra"></div>
         <div class="full-image"><img src="../../partials/images/design/calhacks/wristbands.JPG"></div>
         <div class="long-image"><img src="../../partials/images/design/calhacks/chwristband.png"></div>
-        <div class="third-image"><img src="../../partials/images/design/calhacks/truck.JPG"></div>
-        <div class="third-image"><img src="../../partials/images/design/calhacks/corgi.JPG"></div>
-        <div class="third-image"><img src="../../partials/images/design/calhacks/sticker.JPG"></div>
+        <div class="content-text">
+            The hackathon itself was 36 hours straight, filled with lots of moving boxes, distributing food, helping hackers,
+            making sure sponsors felt at home, and hanging out with everyone who stopped by (even some four-legged friends!)
+        </div>
+        <div class="half-image" style="height:620px"><img src="../../partials/images/design/calhacks/truck.png"></div>
+        <div class="half-image" style="height:620px"><img src="../../partials/images/design/calhacks/corgi.png"></div>
+        <div class="content-text">
+            We put in a lot of marketing effort in the months leading up to Cal Hacks, resulting in over 4000 applications from
+            hackers around the globe! The week before the hackathon, I created some countdown graphics to post daily on our
+            <a href="https://www.facebook.com/CalHacks/?ref=bookmarks" target="_blank"> Facebook page</a> honoring our California heritage, corporate sponsors, and hackathon fuel sponsors!
+        </div>
         <div class="full-image" style="height:340px"><img src="../../partials/images/design/calhacks/chcountdown4.png"></div>
         <div class="full-image" style="height:340px"><img src="../../partials/images/design/calhacks/chcountdown3.png"></div>
-        <div class="full-image" style="height:340px"><img src="../../partials/images/design/calhacks/chcountdown2.png"></div>
+        <div class="full-image" style="height:340px;margin-bottom:150px"><img src="../../partials/images/design/calhacks/chcountdown2.png"></div>
 </div>
