--- a/design/design.html
+++ b/design/design.html
@@ -9,6 +9,7 @@
   <!-- <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css"> -->
   <link rel="stylesheet" href="../css/style.css">
+  <link rel="icon" href="../partials/images/logo2.png">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
   <!-- Google Font Scripts -->
   <link rel="stylesheet" type="text/css"
@@ -121,11 +122,11 @@
           </div>
         </a>
         <a href="content/valentine.html" class="transition">
-          <div class="preview" style="background-color:#e0a6b5">
+          <div class="preview" style="background-color:#b1dcc3">
               <div class="preview-layover">
                   Valentine's Day Cards
               </div>
-              <img src="../partials/images/design/circuit.png" class="height" style="height:250px">
+              <img src="../partials/images/design/valentine.png" >
           </div>
         </a>
         <a href="content/laudem.html" class="transition">
