--- a/prototyping/prototyping.html
+++ b/prototyping/prototyping.html
@@ -9,6 +9,7 @@
   <!-- <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css"> -->
   <link rel="stylesheet" href="../css/style.css">
+  <link rel="icon" href="../partials/images/logo2.png">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
   <!-- Google Font Scripts -->
   <link rel="stylesheet" type="text/css"
@@ -54,33 +55,40 @@
         </div>
       </div>
       <h1 class="section-title"> Prototyping </h1>
-      <h4 class="section-subtitle"> Some visual manifestations of my passions for both engineering and art. </h4>
+      <h4 class="section-subtitle"> Some visual manifestations of my passions for both engineering and art in the form of
+            bluetooth-controlled robots, drawing machines, geared ponds, and more. </h4>
           <a href="content/mo.html" class="transition">
-          <div class="preview">
-              <div class="preview-layover">
-                  Mo: an agile tread robot
+              <div class="preview">
+                  <div class="preview-layover">
+                      Mo: an agile tread robot
+                  </div>
+                  <img src="../partials/images/prototyping/mo.png">
               </div>
-              <img src="../partials/images/prototyping/mo.png">
-          </div>
           </a>
-          <div class="preview">
-              <div class="preview-layover">
-                  Pond in geared motion
+          <a href="content/pond.html" class="transition">
+              <div class="preview">
+                  <div class="preview-layover">
+                      Pond in geared motion
+                  </div>
+                  <img src="../partials/images/prototyping/koi.png">
               </div>
-              <img src="../partials/images/prototyping/koi.png">
-          </div>
-          <div class="preview bottom">
-              <div class="preview-layover">
-                  Breathing kirigami
+          </a>
+          <a href="content/kirigami.html" class="transition">
+              <div class="preview bottom">
+                  <div class="preview-layover">
+                      Breathing kirigami
+                  </div>
+                  <img src="../partials/images/prototyping/origami.png">
               </div>
-              <img src="../partials/images/prototyping/origami.png">
-          </div>
-          <div class="preview bottom">
-              <div class="preview-layover">
-                  Circumferential drawing machine
+          </a>
+          <a href="content/drawing.html" class="transition">
+              <div class="preview bottom">
+                  <div class="preview-layover">
+                      Circumferential drawing machine
+                  </div>
+                  <img src="../partials/images/prototyping/drawing.png">
               </div>
-              <img src="../partials/images/prototyping/drawing.png">
-          </div>
+          </a>
   </div>
 
 </body>
