--- a/design/content/feaster.html
+++ b/design/content/feaster.html
@@ -9,6 +9,7 @@
   <!-- <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css"> -->
   <link rel="stylesheet" href="../../css/style.css">
+  <link rel="icon" href="../../partials/images/logo2.png">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
   <!-- Google Font Scripts -->
   <link rel="stylesheet" type="text/css"
